﻿2007-05-02  Philipp Sehmisch  <tmw@crushnet.org>

	* src/particle.cpp: Fixed a compiler warning.

2007-05-02  BjÃ¶rn Steinbrink  <B.Steinbrink@gmx.de>

	* src/Makefile.am: Add the new particle subclasses to the automake
	configuration.
	* src/imageparticle.h, src/textparticle.h, src/particle.h,
	src/animationparticle.h, src/CMakeLists.txt, src/particleemitter.cpp,
	src/animationparticle.cpp, src/particle.cpp, src/imageparticle.cpp,
	src/textparticle.cpp, src/utils/xml.cpp, src/utils/xml.h: Split the
	particle class into subclasses based on their appeareance.

2007-04-24  Philipp Sehmisch  <tmw@crushnet.org>

	* src/particle.cpp, src/particle.h: Some minor code cleanups, speed
	optimizations and a bit of documentation.

2007-04-23  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/particles/flame.particle.xml,
	data/graphics/particles/blaze.png: Added two files I forgot with the last
	commit.
	* src/resources/mapreader.cpp, src/particle.cpp, src/particleemitter.cpp:
	Using XML child node iteration macro.

2007-04-22  BjÃ¶rn Steinbrink  <B.Steinbrink@gmx.de>

	* src/configuration.cpp, src/utils/xml.h, src/resources/mapreader.cpp,
	src/resources/spritedef.cpp, src/resources/monsterdb.cpp,
	src/resources/itemdb.cpp, src/resources/equipmentdb.cpp: Added a macro
	for XML child node iterations to make the code more terse and easier
	to read.
	* src/resources/itemdb.cpp: Made the parameter checks more terse and
	manageable.

2007-04-19  Philipp Sehmisch  <tmw@crushnet.org>

	* src/resources/mapreader.cpp: Emitter positions are now read from map
	files.
	* src/engine.cpp: Removed the player follow effect used for testing.
	* data/maps/new_4-1.tmx.gz, data/maps/new_5-1.tmx.gz: Added flame effect
	to all lamps on the cave maps
	* data/maps/new_9-1.tmx.gz: Added waterfall effect to the upper right
	corner of NW woodland map.

2007-04-15  BjÃ¸rn Lindeijer  <bjorn@lindeijer.nl>

	* src/openglgraphics.cpp: Rely on default 0 value for z axis.